--- a/public/index.html
+++ b/public/index.html
@@ -2,32 +2,32 @@
 <html translate="no">
   <head>
     <!-- Primary Meta Tags -->
-    <title>ETCswap | Ethereum Classic</title>
-    <meta name="title" content="ETCswap | Ethereum Classic" />
-    <meta name="description" content="Trade ETC & other leading digital assets on ETCswap. Ethereum Classic's leading decentralised exchange protocol where users acquire cryptocurrency without an intermediary." />
+    <title>Emuswap</title>
+    <meta name="title" content="Emuswap" />
+    <meta name="description" content="Trade digital assets on Emuswap. A leading decentralised exchange protocol where users acquire cryptocurrency without an intermediary." />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://etcswap.org" />
-    <meta property="og:title" content="ETCswap | Ethereum Classic" />
-    <meta property="og:site_name" content="ETCswap" />
-    <meta property="og:description" content="Trade ETC & other leading digital assets on ETCswap. Ethereum Classic's leading decentralised exchange protocol where users acquire cryptocurrency without an intermediary." />
+    <meta property="og:url" content="https://Emuswap.org" />
+    <meta property="og:title" content="Emuswap" />
+    <meta property="og:site_name" content="Emuswap" />
+    <meta property="og:description" content="Trade digital assets on Emuswap. A leading decentralised exchange protocol where users acquire cryptocurrency without an intermediary." />
     <meta property="og:image" content="%PUBLIC_URL%/images/social-card.png" />
-    <meta property="og:image:alt" content="ETCswap on Ethereum Classic" />
+    <meta property="og:image:alt" content="Emuswap" />
     <!-- Twitter / X -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://etcswap.org" />
-    <meta property="twitter:title" content="ETCswap | Ethereum Classic" />
-    <meta property="twitter:description" content="Trade ETC & other leading digital assets on ETCswap. Ethereum Classic's leading decentralised exchange protocol where users acquire cryptocurrency without an intermediary." />
+    <meta property="twitter:url" content="https://Emuswap.org" />
+    <meta property="twitter:title" content="Emuswap" />
+    <meta property="twitter:description" content="Trade digital assets on Emuswap. A leading decentralised exchange protocol where users acquire cryptocurrency without an intermediary." />
     <meta property="twitter:image" content="%PUBLIC_URL%/images/social-card.png" />
-    <meta property="twitter:image:alt" content="ETCswap on Ethereum Classic" />
+    <meta property="twitter:image:alt" content="Emuswap" />
     <!-- Additional Meta Tags -->
     <meta charset="utf-8" />
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="application-name" content="ETCswap" />
-    <meta name="author" content="ETCswap" />
-    <meta name="keywords" content= "etcswap,decentralized exchange,crypto,blockchain,ethereum classic" /> 
+    <meta name="application-name" content="Emuswap" />
+    <meta name="author" content="Emuswap" />
+    <meta name="keywords" content= "Emuswap,decentralized exchange,crypto,blockchain,ethereum classic" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#FFF" />
     <meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
